# ModelingNetworks

./: .gitignore  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/succulents/request/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/succulents/request/: MainActivity.kt
android/app/src/main/java/com/succulents/request/models/: GetRequestModel.kt  PostRequestModel.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/app/src/test/java/com/succulents/request/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/network/: build.gradle.kts
android/network/src/androidTest/java/com/succulents/network/: ExampleInstrumentedTest.kt
android/network/src/main/java/com/succulents/network/: Request.kt  RequestModel.kt  ResponseBody.kt
android/network/src/test/java/com/succulents/network/: ExampleUnitTest.kt
core/: Cargo.toml  build.sh
core/ffi/: Cargo.toml
core/ffi/src/: lib.rs
core/spider-man/: Cargo.toml
core/spider-man/src/: engine.rs
core/spider-man/src/model/: http_header.rs  http_method.rs  mod.rs  request_model.rs  response_model.rs
model/: get.yaml  post.yaml
python/: .gitignore  constant.py  gen.sh  request_data.py  request_gen.py
python/android/: kt_gen.py
python/rust/: rs_gen.py
python/template/: android.kt  rust.rs
(+3 files in other folders)
