[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "ffi"
crate-type = ["cdylib"]

[dependencies]
spider-man = { version = "0.1.0", path = "../spider-man" }
jni = "0.21.1"
tokio = "1.39.2"
openssl = { version = "0.10.62", features = ["vendored"] }
android_logger = "0.14.1"
log = "0.4.22"
serde_json = "1.0.125"
